src/zenoh_dart.h

// ---------------------------------------------------------------------------
// Dart API initialization
// ---------------------------------------------------------------------------

/// Initializes the Dart native API for dynamic linking.
///
/// Must be called before any other zenoh_dart functions that use
/// Dart native ports. Pass `NativeApi.initializeApiDLData` from Dart.
///
/// Returns 0 on success.
FFI_PLUGIN_EXPORT intptr_t zd_init_dart_api_dl(void* data);
/// Frees a block with no canon handle in it. The slot-only shape.
///
/// Used where the Dart wrapper's whole release is a `calloc.free` — today
/// `ZDeserializer` — and as the RE-ATTACHED shape for a wrapper whose canon
/// handle has moved out from under it (a consumed `ShmMutBuffer`, a
/// `KeyExpr` view's string block).
///
/// See the family contract above: callback-only, not idempotent, frees a
/// Dart-allocated block.
FFI_PLUGIN_EXPORT void zd_fin_free_block(void* token);
/// Returns how many times the entry for @p kind has fired in this process.
///
/// ⚠️ **A TEST INSTRUMENT, and the only member of this family Dart calls
/// directly.** It exists because a leak is invisible to a behavioural
/// assertion: dispose-after-consume, double-dispose and accessor-guard cells
/// all pass identically on leaking and on fixed code. This counter plus
/// allocation pressure is what makes a release-path cell a RESOURCE
/// measurement, with a both-ways injected calibration
/// (attach-without-detach → 2 · detach-before-drop → 1 · no-attach → 0).
///
/// ⚠️ **PER ENTRY, NOT GLOBAL, AND THAT IS LOAD-BEARING.** A single counter
/// cannot say WHICH entry fired, so a wrong implementation — an owned
/// `KeyExpr` left on the free-only shape (canon's keyexpr leaked), an
/// escaped-pointer `ShmMutBuffer` left on the drop+free shape (a
/// use-after-free) — would read 1 on the same counter and the cell would go
/// green on the exact hazard it exists for.
///
/// @param kind  One of the ZD_FIN_KIND_* codes above. Out-of-range returns 0:
///              the domain is a fixed header-declared enumeration and the Dart
///              mirror validates before calling, so this arm is unreachable by
///              construction — the same "the Dart guard is the guard" shape
///              the family contract describes. No failure code is introduced.
/// @return The count, monotonically non-decreasing, never reset.
FFI_PLUGIN_EXPORT int zd_fin_invocations(int kind);
// Wire values for zd_fin_last_on_main(). Uppercase macros for the same reason
// as the kind codes: ffigen does not emit them, and the Dart side mirrors
// them. Declared as an explicit enumerated domain rather than a bare bool
// because 0 must mean "nothing observed", NOT "observed, and not the main
// thread" -- those are different facts and a zero-initialised flag conflates
// them. (CONV-1: an enumerated value crossing the seam declares its wire
// values in the header and mirrors them in Dart.)
#define ZD_FIN_ON_MAIN_UNOBSERVED 0
/// Reports whether the LAST firing of @p kind ran on the thread that called
/// zd_init_dart_api_dl -- i.e. the Dart mutator.
///
/// ⚠️ **A TEST INSTRUMENT, and it exists because a freeze and a mutator stall
/// read identically on a stopwatch.** The SDK documents a `NativeFinalizer`
/// callback as running "on an arbitrary thread, with no current isolate", and
/// a hypothesis phrased "on the finalizer thread ... freezes the isolate
/// group" is asserting something a timing measurement alone cannot establish:
/// a blocking release reached from the MUTATOR blocks that mutator inside GC
/// instead, which is a different failure with the same observable. So every
/// finalizer-timing and criterion-(ii) result in this seed records the thread
/// beside it.
///
/// The reference thread is the one that initialised the Dart API DL, captured
/// there rather than assumed: this shim is loaded eagerly on the main thread by
/// `native_lib.dart`, so that call site IS the mutator.
///
/// @param kind  One of the ZD_FIN_KIND_* codes. Out of range returns
///              ZD_FIN_ON_MAIN_UNOBSERVED, for the same
///              unreachable-by-construction reason as zd_fin_invocations.
/// @return One of the ZD_FIN_ON_MAIN_* values above.
FFI_PLUGIN_EXPORT int zd_fin_last_on_main(int kind);
/// `KeyExpr`'s net, OWNED backing only: `zd_keyexpr_drop` then `free(token)`.
///
/// ⚠️ A VIEW-backed key expression does NOT use this entry. A view owns
/// nothing — it borrows the caller's bytes — so there is no canon handle to
/// drop, and it carries TWO `zd_fin_free_block` attachments instead (its
/// `calloc`'d view slot and its `malloc`'d string), under one detach key.
/// Routing an owned backing onto the free-only shape would leak canon's
/// keyexpr silently; routing a view onto this one would drop a handle that was
/// never owned. That is why the two counters are read separately in the cells.
FFI_PLUGIN_EXPORT void zd_fin_keyexpr(void* token);
/// `ZBytesWriter`'s net: `zd_bytes_writer_drop` then `free(token)`.
///
/// ⚠️ `finish()` is a RELEASE path, not just a state change: it moves the
/// handle into canon and frees the slot. It detaches for the same reason
/// `markConsumed()` does. See the family contract above.
FFI_PLUGIN_EXPORT void zd_fin_bytes_writer(void* token);
/// `ZSerializer`'s net: `zd_serializer_drop` then `free(token)`.
///
/// Same three-state shape as `zd_fin_bytes_writer` above.
FFI_PLUGIN_EXPORT void zd_fin_serializer(void* token);
/// `Publisher`'s net: `zd_publisher_drop` then `free(token)`.
///
/// ⚠️ **Reached only from the matching-listener-OFF configuration.** A
/// publisher declared with `enableMatchingListener: true` holds a
/// `ReceivePort`, its drop callback can post, and a post from a finalizer
/// callback is documented undefined behaviour -- so that configuration is
/// deliberately left out of the net and keeps today's leak-on-forget. The
/// MARKER is on the class either way; only the NET is conditional.
FFI_PLUGIN_EXPORT void zd_fin_publisher(void* token);
/// Drops an owned key expression, releasing its native allocation.
///
/// This is the LOCAL release. It does not unregister a declared key
/// expression from its session -- see zd_undeclare_keyexpr for that. Safe on
/// a gravestone (canon's null-drop contract).
///
/// @param ke  Pointer to a z_owned_keyexpr_t. Left gravestoned.
FFI_PLUGIN_EXPORT void zd_keyexpr_drop(z_owned_keyexpr_t* ke);
/// Drops (undeclares and frees) a publisher.
FFI_PLUGIN_EXPORT void zd_publisher_drop(z_owned_publisher_t* publisher);
/// Performs a get query on the given selector.
///
/// Replies are posted to the Dart isolate via the given native port. An ok
/// reply's key expression rides the message as a length-carried `Uint8List`,
/// so an interior NUL survives.
///
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param selector       Const pointer to the loaned selector key expression,
///                       already validated Dart-side. The `parameters` half of
///                       a selector is a separate argument.
/// @param port           The Dart native port to post replies to.
/// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
///                       Consumed via z_bytes_move if non-NULL.
/// @param encoding       MIME type string (NULL = default).
/// @param timeout_ms     Timeout in milliseconds.
/// @param parameters     Additional query parameters, LENGTH-CARRIED rather
///                       than NUL-terminated: the selector's parameters
///                       segment is UTF-8 text whose domain includes an
///                       interior NUL, and canon's own `z_get` is this entry
///                       with `strlen` applied. NULL with `parameters_len` 0
///                       is canon's "no parameters" spelling.
/// @param parameters_len Byte length of `parameters`. Must be 0 when
///                       `parameters` is NULL (canon refuses NULL-with-length).
/// @param attachment     Pointer to z_owned_bytes_t (NULL = no attachment).
///                       Consumed via z_bytes_move if non-NULL.
/// @param congestion_control  Congestion control strategy, or -1 to leave
///                       canon's own default. NOTE: get is a REQUEST path, so
///                       canon's default here is CongestionControl::
///                       DEFAULT_REQUEST = BLOCK -- not DROP, which is the
///                       push-path default used by put/delete/publisher.
/// @param priority       Priority 1..7, or -1 to leave canon's default (data=5).
/// @param is_express     1/0 to set express mode, or -1 to leave canon's
///                       default (false).
/// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
///                       default (ANY).
/// @param accept_replies z_reply_keyexpr_t 0..1, or -1 to leave canon's
///                       default (MATCHING_QUERY = 1).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_get(
    const uint8_t* session,
    const z_loaned_keyexpr_t* selector,
    int64_t port,
    int8_t target,
    int8_t consolidation,
    uint8_t* payload,
    const char* encoding, size_t encoding_len,
    const char* encoding_schema, size_t encoding_schema_len,
    uint64_t timeout_ms,
    const char* parameters,
    size_t parameters_len,
    uint8_t* attachment,
    int congestion_control,
    int priority,
    int8_t is_express,
    int allowed_destination,
    int accept_replies,
    int retain_payload);
/// Drops (frees) the SHM provider.
FFI_PLUGIN_EXPORT void zd_shm_provider_drop(z_owned_shm_provider_t* provider);
/// `ShmProvider`'s net: `zd_shm_provider_drop` then `free(token)`.
///
/// ⛔ **SHM-guarded, so ABSENT from the `stable` native and from every Android
/// build.** The Dart side resolves it lazily, at first attach, from a path
/// already behind `requireShm()`.
///
/// ⚠️ **Releasing a provider does NOT invalidate its children**, which is what
/// makes this admissible at all: the segment is refcounted by the chunks, so a
/// live `ShmMutBuffer`, a `toBytes()` payload and a `putBytes` all keep working
/// after the provider is dropped. Measured, both at planning and as a cell.
FFI_PLUGIN_EXPORT void zd_fin_shm_provider(void* token);
/// `ShmMutBuffer`'s net, FRESH state only: `zd_shm_mut_drop` then `free`.
///
/// ⛔ **A buffer whose `data` pointer has ESCAPED does NOT use this entry**, and
/// a consumed one does not either. Both move to `zd_fin_free_block`, which
/// reclaims the Dart slot and leaves the chunk alone.
///
/// The reason is the difference between a leak and a use-after-free. Once a
/// caller holds the raw `data` pointer, freeing the chunk under it would turn
/// today's leak-on-forget into a UAF — strictly worse. So the escape DOWNGRADES
/// the net rather than arming it: the chunk keeps exactly today's behaviour and
/// the wrapper's own slot is still reclaimed. **The severity never increases.**
///
/// ⚠️ SHM-guarded, absent from `stable` and from Android, resolved lazily from
/// a path already behind `requireShm()`.
FFI_PLUGIN_EXPORT void zd_fin_shm_mut(void* token);
/// `ShmProvider`'s net once an async request has been started: releases the
/// box rather than dropping the provider.
///
/// ⛔ The ordinary `zd_fin_shm_provider` drops directly, and that faults while
/// canon holds a request -- measured through the finalizer itself, 3/3, on an
/// exhausted pool. This entry defers instead; the provider is dropped by
/// whoever releases the last reference.
FFI_PLUGIN_EXPORT void zd_fin_shm_provider_deferred(void* token);
/// Drops (frees) a mutable SHM buffer.
FFI_PLUGIN_EXPORT void zd_shm_mut_drop(z_owned_shm_mut_t* buf);
/// Drops (frees) an owned serializer.
///
/// After this call the owned serializer is in gravestone state.
///
/// @param ser  Pointer to a ze_owned_serializer_t to drop.
FFI_PLUGIN_EXPORT void zd_serializer_drop(ze_owned_serializer_t* ser);