package/lib/src/bindings.dart


  /// `KeyExpr`'s net, OWNED backing only: `zd_keyexpr_drop` then `free(token)`.
  ///
  /// ⚠️ A VIEW-backed key expression does NOT use this entry. A view owns
  /// nothing — it borrows the caller's bytes — so there is no canon handle to
  /// drop, and it carries TWO `zd_fin_free_block` attachments instead (its
  /// `calloc`'d view slot and its `malloc`'d string), under one detach key.
  /// Routing an owned backing onto the free-only shape would leak canon's
  /// keyexpr silently; routing a view onto this one would drop a handle that was
  /// never owned. That is why the two counters are read separately in the cells.
  void zd_fin_keyexpr(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_keyexpr(
      token,
    );
  }

  late final _zd_fin_keyexprPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_keyexpr',
      );
  late final _zd_fin_keyexpr = _zd_fin_keyexprPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Reports whether the LAST firing of @p kind ran on the thread that called
  /// zd_init_dart_api_dl -- i.e. the Dart mutator.
  ///
  /// ⚠️ **A TEST INSTRUMENT, and it exists because a freeze and a mutator stall
  /// read identically on a stopwatch.** The SDK documents a `NativeFinalizer`
  /// callback as running "on an arbitrary thread, with no current isolate", and
  /// a hypothesis phrased "on the finalizer thread ... freezes the isolate
  /// group" is asserting something a timing measurement alone cannot establish:
  /// a blocking release reached from the MUTATOR blocks that mutator inside GC
  /// instead, which is a different failure with the same observable. So every
  /// finalizer-timing and criterion-(ii) result in this seed records the thread
  /// beside it.
  ///
  /// The reference thread is the one that initialised the Dart API DL, captured
  /// there rather than assumed: this shim is loaded eagerly on the main thread by
  /// `native_lib.dart`, so that call site IS the mutator.
  ///
  /// @param kind  One of the ZD_FIN_KIND_* codes. Out of range returns
  /// ZD_FIN_ON_MAIN_UNOBSERVED, for the same
  /// unreachable-by-construction reason as zd_fin_invocations.
  /// @return One of the ZD_FIN_ON_MAIN_* values above.
  int zd_fin_last_on_main(
    int kind,
  ) {
    return _zd_fin_last_on_main(
      kind,
    );
  }

  late final _zd_fin_last_on_mainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'zd_fin_last_on_main',
      );
  late final _zd_fin_last_on_main = _zd_fin_last_on_mainPtr
      .asFunction<int Function(int)>();

  /// `Publisher`'s net: `zd_publisher_drop` then `free(token)`.
  ///
  /// ⚠️ **Reached only from the matching-listener-OFF configuration.** A
  /// publisher declared with `enableMatchingListener: true` holds a
  /// `ReceivePort`, its drop callback can post, and a post from a finalizer
  /// callback is documented undefined behaviour -- so that configuration is
  /// deliberately left out of the net and keeps today's leak-on-forget. The
  /// MARKER is on the class either way; only the NET is conditional.
  void zd_fin_publisher(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_publisher(
      token,
    );
  }

  late final _zd_fin_publisherPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_publisher',
      );
  late final _zd_fin_publisher = _zd_fin_publisherPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ZSerializer`'s net: `zd_serializer_drop` then `free(token)`.
  ///
  /// Same three-state shape as `zd_fin_bytes_writer` above.
  void zd_fin_serializer(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_serializer(
      token,
    );
  }

  late final _zd_fin_serializerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_serializer',
      );
  late final _zd_fin_serializer = _zd_fin_serializerPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ShmMutBuffer`'s net, FRESH state only: `zd_shm_mut_drop` then `free`.
  ///
  /// ⛔ **A buffer whose `data` pointer has ESCAPED does NOT use this entry**, and
  /// a consumed one does not either. Both move to `zd_fin_free_block`, which
  /// reclaims the Dart slot and leaves the chunk alone.
  ///
  /// The reason is the difference between a leak and a use-after-free. Once a
  /// caller holds the raw `data` pointer, freeing the chunk under it would turn
  /// today's leak-on-forget into a UAF — strictly worse. So the escape DOWNGRADES
  /// the net rather than arming it: the chunk keeps exactly today's behaviour and
  /// the wrapper's own slot is still reclaimed. **The severity never increases.**
  ///
  /// ⚠️ SHM-guarded, absent from `stable` and from Android, resolved lazily from
  /// a path already behind `requireShm()`.
  void zd_fin_shm_mut(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_shm_mut(
      token,
    );
  }

  late final _zd_fin_shm_mutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_shm_mut',
      );
  late final _zd_fin_shm_mut = _zd_fin_shm_mutPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ShmProvider`'s net: `zd_shm_provider_drop` then `free(token)`.
  ///
  /// ⛔ **SHM-guarded, so ABSENT from the `stable` native and from every Android
  /// build.** The Dart side resolves it lazily, at first attach, from a path
  /// already behind `requireShm()`.
  ///
  /// ⚠️ **Releasing a provider does NOT invalidate its children**, which is what
  /// makes this admissible at all: the segment is refcounted by the chunks, so a
  /// live `ShmMutBuffer`, a `toBytes()` payload and a `putBytes` all keep working
  /// after the provider is dropped. Measured, both at planning and as a cell.
  void zd_fin_shm_provider(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_shm_provider(
      token,
    );
  }

  late final _zd_fin_shm_providerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_shm_provider',
      );
  late final _zd_fin_shm_provider = _zd_fin_shm_providerPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ShmProvider`'s net once an async request has been started: releases the
  /// box rather than dropping the provider.
  ///
  /// ⛔ The ordinary `zd_fin_shm_provider` drops directly, and that faults while
  /// canon holds a request -- measured through the finalizer itself, 3/3, on an
  /// exhausted pool. This entry defers instead; the provider is dropped by
  /// whoever releases the last reference.
  void zd_fin_shm_provider_deferred(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_shm_provider_deferred(
      token,
    );
  }

  late final _zd_fin_shm_provider_deferredPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_shm_provider_deferred',
      );
  late final _zd_fin_shm_provider_deferred = _zd_fin_shm_provider_deferredPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Performs a get query on the given selector.
  ///
  /// Replies are posted to the Dart isolate via the given native port. An ok
  /// reply's key expression rides the message as a length-carried `Uint8List`,
  /// so an interior NUL survives.
  ///
  /// @param session        Const pointer to a loaned session (as uint8_t*).
  /// @param selector       Const pointer to the loaned selector key expression,
  /// already validated Dart-side. The `parameters` half of
  /// a selector is a separate argument.
  /// @param port           The Dart native port to post replies to.
  /// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
  /// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
  /// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
  /// Consumed via z_bytes_move if non-NULL.
  /// @param encoding       MIME type string (NULL = default).
  /// @param timeout_ms     Timeout in milliseconds.
  /// @param parameters     Additional query parameters, LENGTH-CARRIED rather
  /// than NUL-terminated: the selector's parameters
  /// segment is UTF-8 text whose domain includes an
  /// interior NUL, and canon's own `z_get` is this entry
  /// with `strlen` applied. NULL with `parameters_len` 0
  /// is canon's "no parameters" spelling.
  /// @param parameters_len Byte length of `parameters`. Must be 0 when
  /// `parameters` is NULL (canon refuses NULL-with-length).
  /// @param attachment     Pointer to z_owned_bytes_t (NULL = no attachment).
  /// Consumed via z_bytes_move if non-NULL.
  /// @param congestion_control  Congestion control strategy, or -1 to leave
  /// canon's own default. NOTE: get is a REQUEST path, so
  /// canon's default here is CongestionControl::
  /// DEFAULT_REQUEST = BLOCK -- not DROP, which is the
  /// push-path default used by put/delete/publisher.
  /// @param priority       Priority 1..7, or -1 to leave canon's default (data=5).
  /// @param is_express     1/0 to set express mode, or -1 to leave canon's
  /// default (false).
  /// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
  /// default (ANY).
  /// @param accept_replies z_reply_keyexpr_t 0..1, or -1 to leave canon's
  /// default (MATCHING_QUERY = 1).
  /// @return 0 on success, negative on failure.
  int zd_get(
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Opaque> selector,
    int port,
    int target,
    int consolidation,
    ffi.Pointer<ffi.Uint8> payload,
    ffi.Pointer<ffi.Char> encoding,
    int encoding_len,
    ffi.Pointer<ffi.Char> encoding_schema,
    int encoding_schema_len,
    int timeout_ms,
    ffi.Pointer<ffi.Char> parameters,
    int parameters_len,
    ffi.Pointer<ffi.Uint8> attachment,
    int congestion_control,
    int priority,
    int is_express,
    int allowed_destination,
    int accept_replies,
    int retain_payload,
  ) {
    return _zd_get(
      session,
      selector,
      port,
      target,
      consolidation,
      payload,
      encoding,
      encoding_len,
      encoding_schema,
      encoding_schema_len,
      timeout_ms,
      parameters,
      parameters_len,
      attachment,
      congestion_control,
      priority,
      is_express,
      allowed_destination,
      accept_replies,
      retain_payload,
    );
  }

  late final _zd_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Int8,
            ffi.Int8,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int8,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('zd_get');
  late final _zd_get = _zd_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();
